added speech recognition

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,5 +18,6 @@ pycodestyle==2.5.0
 PyJWT==1.4.2
 python-dotenv==0.10.1
 six==1.12.0
+SpeechRecognition==3.8.1
 webassets==0.12.1
 Werkzeug==0.14.1
