--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Flask==1.0.2
 Flask-Assets==0.12
 Flask-Cors==3.0.7
 Flask-JWT==0.3.2
+gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10
 jmespath==0.9.4
